# opensource-rag

./: README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt
