[project]
name = "opensource-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docarray>=0.41.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.11",
    "langchain-voyageai>=0.1.4",
    "openai>=1.69.0",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
]
